--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
